[package]
name = "azure-projmon"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3"
tokio = {version = "1.28", features = ["full"] }
phf = {version = "0.11", features = ["default", "macros"] }
once_cell = "1.17"
swayipc-async = "2.0"

three-d = "0.15"
# three-d-asset = {git = "https://github.com/asny/three-d-asset",features = ["hdr", "http"] }
three-d-asset = {version = "0.5", features = ["hdr", "http"] }


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
target-cpu = "native"

