[package]
name = "azure-projmon"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3"
tokio = {version = "1.28", features = ["full"] }
phf = {version = "0.11", features = ["default", "macros"] }
once_cell = "1.17"
swayipc-async = "2.0"

# Graphics
rend3 = "0.3"
rend3-framework = "0.3"
rend3-routine = "0.3"
glam = "0.22"
winit = "0.28"


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
target-cpu = "native"

